--- a/Html/HomePage.html
+++ b/Html/HomePage.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* navbar CSS */
         .navbar{
             position: fixed;
             top: 0;
@@ -63,6 +64,8 @@
         .navEnd span{
             color:rgb(83, 46, 0)
         }
+
+        /* carousel CSS */
         .carousel-item img{
             height: 600px;
         }
@@ -186,6 +189,7 @@
         .top_345 a:hover img, .top_345 a:focus img{
             transform: scale(1.2);
         }
+        /* HomeContent CSS */
         #wrap {
             min-height: 100%;
             position: relative;
