--- a/Html/Sign_upPage.html
+++ b/Html/Sign_upPage.html
@@ -112,39 +112,53 @@
         /* Content CSS*/
         .container{
             font-family: 'Noto Sans KR', sans-serif;
+            color:#42464A;
         }
-        .welcome-header{
-            margin:80px 0px;
+        .head1{
+            margin: 80px 100px;
             text-align: center;
             display:flex;
             flex-direction: column;
             align-items: center;
-        }
-        .welcome-header__title{
-            margin-bottom: 35px;
             font-size: 30px;
             font-weight: bold;
+            padding-bottom:70px;
+            border-bottom:1px solid;
         }
-        .welcome-header__text,.welcome-header__text2{
-            width : 70%;
-            opacity: 0.7;
-            font-weight: bold;
-        }
-        .welcome-header__text{
-            margin-bottom: 5px;
-        }
-        #Login-form{
-            display: flex;
-            flex-direction: column;
+        #myForm{
+            display:flex;
+            flex-direction:column;
             margin: 0px 100px;
         }
-        #Login-form input{
-            border: none;
-            padding:17px 0px;
-            font-size: 17px;
-            margin-top: 15px;
+        #myForm label{
+            margin-top:60px;
+            text-align:center;
+            display:inline-block;
+            width:120px;
+            height:30px;
+            vertical-align:center;
+            font-weight:bold;
         }
-        #Login-form input:nth-child(4){
+        #myForm input{
+            border:none;
+            padding:7px 5px;
+            font-size: 17px;
+            margin-top: 5px;
+            border-bottom:1.5px solid rgba(29,63,109,0.4);
+            transition: border-color 0.6s ease-in-out;
+            display:inline-block;
+            width : 500px;
+        }
+        #myForm div{
+            text-align: center;
+        }
+        #myForm input:focus, #myForm input:hover{
+            border-color: rgb(111, 0, 255);
+        }
+        #myForm input:focus{
+            outline: 0;
+        }
+        #myForm button{
             margin-top: 17px;
             margin-bottom: 30px;
             padding: 13px;
@@ -153,61 +167,10 @@
             opacity: 0.7;
             color:rgba(255,255,255,0.9);
             border-radius: 8px;
-            background-color: #007cc4;
+            background-color: #1D3F6D;
             cursor: pointer;
-        }
-        #Login-form input:nth-child(4):hover{
-            background-color: rgb(111, 0, 255);
-            transition: 0.5s ease-in-out;
-        }
-        #Login-form button{
-            height:45px;
-            margin-top: 12px;
-            padding: 13px;
-            font-size: 15px;
-            font-weight: bold;
-            border: none;
-            border-bottom: rgba(0,0,0,0.3);
-            border-radius: 8px;
-            opacity: 0.7;
-            color:rgba(0,0,0,0.9);
-            background-color: yellow;
-            cursor: pointer;
-        }
-        .but{
-            color:black;
-            text-decoration:none;
+            width : 200px;
             display:inline-block;
-            width:1096px;
-            height:45px;
-
-        }
-        #Login-form input::placeholder{
-            color:rgba(0,0,0,0.3);
-            font-weight: bold;
-            font-size: 16px;
-            text-align:center;
-        }
-        #Login-form input:not([type="submit"]){
-            border-bottom:1.5px solid rgba(29,63,109,0.4);
-            transition: border-color 0.8s ease-in-out;
-        }
-        #Login-form input:hover{
-            border-color: rgb(111, 0, 255);
-        }
-        #Login-form input:focus{
-            outline: 0;
-            border-color: rgb(111, 0, 255);
-        }
-        .find{
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-            font-size: 13px;
-            color:rgba(0,0,0,0.6);
-            font-weight: bold;
-            text-decoration: none;
-            cursor: pointer;
         }
 
         /* Footer CSS*/
@@ -302,38 +265,64 @@
                 <img src="Img/carousel1_ohryukdo.png" class="d-block w-100" >
                 <div class="d-none d-md-block carousel_subtext">
                     <div class="name">
-                        <p>로그인</p>
-                        <p style="font-size: 30px;">Log IN</p>
+                        <p>회원가입</p>
+                        <p style="font-size: 30px;">Sign-Up</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Content Part-->
-    <div class="container" style="height:900px;">
-        <div>
-
-        </div>
-        <header class="welcome-header">
-            <h1 class="welcome-header__title">Busan For U 에 오신것을 환영합니다!</h1>
-            <p class="welcome-header__text">사용자 계정이 있다면,</p>
-            <p class="welcome-header__text2">ID와 Password를 입력하여 로그인 하세요.</p>
-        </header>
-    
-        <form action="${pageContext.request.contextPath}/users/login.do" method="post" id="Login-form">
-                <c:choose>
-                    <c:when test="${ empty param.url }">
-                        <input type="hidden" name="url" value="${pageContext.request.contextPath}/"/>
-                    </c:when>
-                    <c:otherwise>
-                        <input type="hidden" name="url" value="${param.url }"/>
-                    </c:otherwise>
-                </c:choose>
-            <input type="text" id="users_id" name="users_id"  placeholder="Email or ID" />
-            <input type="password" id="users_pwd" name="users_pwd"  placeholder="Password"/>
-            <input type="submit" value="Log in" style="margin-top:40px;"/>
-               <a href="" class="find">회원가입이 필요하십니까?</a>
-        </form>          
+    <div class="container" style="height:1350px";>
+        <form action="${pageContext.request.contextPath}/users/signup.do" method="post" id="myForm">
+            <div>
+                <label class="control-label" for="users_id">아이디</label>
+                <input class="form-control" type="text" name="users_id" id="users_id" placeholder="Email or ID" style="outline: 0;"/>
+                <div id="id_length_validation" class="invalid-feedback">영문자 소문자로 시작하고 5~10글자 이내로 작성해주세요.</div>
+                <div id="id_overlap_validation" class="invalid-feedback">중복된 아이디 입니다.</div>
+            </div>		
+            <div>
+                <label class="control-label" for="users_name">이름</label>
+                <input class="form-control" type="text" name="users_name" id="users_name"/>
+            </div>
+            <div>
+                <label class="control-label" for="users_pwd">비밀번호</label>
+                <input class="form-control" type="password" name="users_pwd" id="users_pwd"/>
+                <div id="pwd_length_validation" class="invalid-feedback">영문자,숫자,특수문자를 하나이상을 사용해주세요.</div>
+                <div id="pwd_length_validation" class="valid-feedback">비밀번호 확인</div>
+            </div>
+            <div>
+                <label class="control-label" for="users_pwd2">비밀번호 확인</label>
+                <input class="form-control" type="password" name="users_pwd2" id="users_pwd2"/>
+                <div id="pwd2_overlap_validation" class="invalid-feedback">비밀번호가 일치하지 않습니다.</div>
+                <div id="pwd2_overlap_validation" class="valid-feedback">비밀번호가 일치합니다.</div>
+            </div>
+            <div>
+                <label class="control-label" for="users_email">이메일</label>
+                <input class="form-control" type="text" name="users_email" id="users_email"/>
+                <div class="invalid-feedback">이메일 형식을 확인 하세요.</div>
+            </div>
+            <div>
+                <label class="control-label" for="users_sex">성별</label>
+                <input class="form-control" type="text" name="users_sex" id="users_sex"/>
+            </div>
+            <div>
+                <label class="control-label" for="users_birthday">생년월일</label>
+                <input class="form-control" type="number" name="users_birthday" id="users_birthday"/>
+                
+            </div>
+            <div>
+                <label class="control-label" for="users_phoneNum">연락처</label>
+                <input class="form-control" type="text" name="users_phoneNum" id="users_phoneNum"/>
+            </div>
+            <div>
+                <label class="control-label" for="users_addr">주소</label>
+                <input class="form-control" type="text" name="users_addr" id="users_addr"/>
+            </div>
+            <div style="margin-top:50px; padding-top:40px;">
+                <button class="btn btn-primary" type="submit" style="background-color: #007cc4; border:none; width: 350px;">가입</button>
+            </div>
+        </form>
     </div>
 
     <!-- Footer Part-->
