add favicon & Update carousel,Headbar

--- a/Html/MyPage.html
+++ b/Html/MyPage.html
@@ -16,7 +16,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B4U Sign-Up Page</title>
+    <title>B4U MyPage</title>
     <style>
         /* Navbar CSS */
         .navbar{
@@ -269,11 +269,11 @@
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Img/Headbar_Busan_2.png" class="d-block w-100" >
+                <img src="Img/Headbar_Busan_3.png" class="d-block w-100" >
                 <div class="d-none d-md-block carousel_subtext">
                     <div class="name">
-                        <p>회원가입</p>
-                        <p style="font-size: 30px;">Sign-Up</p>
+                        <p>마이페이지</p>
+                        <p style="font-size: 30px;">Mypage</p>
                     </div>
                 </div>
             </div>
@@ -327,7 +327,7 @@
                 <input class="form-control" type="text" name="users_addr" id="users_addr"/>
             </div>
             <div style="margin-top:50px; padding-top:40px;">
-                <button class="btn btn-primary submit-btn" type="submit" style="border:none; width: 350px;">가 입</button>
+                <button class="btn btn-primary submit-btn" type="submit" style="border:none; width: 350px;">수정하기</button>
             </div>
         </form>
     </div>
