--- a/Html/HomePage.html
+++ b/Html/HomePage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" sizes="48x48" href="Img/B4U_favicon.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome B4U!</title>
     <style>
         /* navbar CSS */
         .navbar{
@@ -28,6 +29,8 @@
             border: 0;
             outline: 0;
             background-color: white;
+            width:210px;
+            margin-left: 80px;
         }
         .BFU p{
             display:inline-block;
@@ -36,7 +39,6 @@
             width: 200px;
             height: 80px;
             margin-top: 30px;
-            margin-left: 80px;
         }
         .navMid{
             font-family: 'IBM Plex Sans KR', sans-serif;
@@ -70,7 +72,7 @@
             height: 600px;
         }
         .carousel{
-            margin: 60px 100px 0px 100px;
+            margin: 60px 0px 0px 0px;
             z-index: 20;
         }
         .carousel_headtext{
