--- a/Html/Log_inPage.html
+++ b/Html/Log_inPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" sizes="48x48" href="Img/B4U_favicon.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B4U Log-In Page</title>
     <style>
         /* Navbar CSS */
         .navbar{
@@ -30,6 +31,8 @@
             border: 0;
             outline: 0;
             background-color: white;
+            width:210px;
+            margin-left: 80px;
         }
         .BFU p{
             display:inline-block;
@@ -38,7 +41,6 @@
             width: 200px;
             height: 80px;
             margin-top: 30px;
-            margin-left: 80px;
         }
         .navMid{
             font-family: 'IBM Plex Sans KR', sans-serif;
@@ -72,7 +74,7 @@
             filter: brightness(90%);
         }
         .carousel{
-            margin: 60px 100px 0px 100px;
+            margin: 60px 0px 0px 0px;
             z-index: 20;
         }
         .carousel_headtext{
@@ -299,7 +301,7 @@
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Img/carousel1_ohryukdo.png" class="d-block w-100" >
+                <img src="Img/Headbar_Busan_1.png" class="d-block w-100" >
                 <div class="d-none d-md-block carousel_subtext">
                     <div class="name">
                         <p>로그인</p>
