--- a/Html/HomePage.html
+++ b/Html/HomePage.html
@@ -117,6 +117,9 @@
             font-size: 30px;
             font-family: 'Do Hyeon', sans-serif;
         }
+
+        /* HomeContent CSS */
+
         .places{
             margin-left:200px;
             margin-right:200px;
@@ -156,25 +159,26 @@
             text-align: left;
         }
         .top_345{
-            margin-bottom: 500px;
+            margin-bottom: 400px;
+            height: 600px;
         }
         .top_345_explain{
             width: 400px;
             height: 200px;
             text-align: left;
+            margin-left: 10px;
         }
         .top_345 div{
             display: inline-block;
         }
         .top_3, .top_4{
             width: 340px;
-            height: 500px;
+            height: 550px;
             margin-right: 26px;
         }
         .top_5{
             width: 340px;
-            height: 500px;
-
+            height: 550px;
         }
         .top_3 img, .top_4 img, .top_5 img{
             width: 340px;
@@ -191,7 +195,7 @@
         .top_345 a:hover img, .top_345 a:focus img{
             transform: scale(1.2);
         }
-        /* HomeContent CSS */
+        /* Footer CSS */
         #wrap {
             min-height: 100%;
             position: relative;
@@ -209,7 +213,6 @@
             color:#666666;
             font-size:18px;
             text-align:center;
-
         }
         .white{
             color:white;
@@ -364,12 +367,12 @@
         <h1>부산을 듬뿍 느낄 수 있는 장소들 TOP5</h1>
     </div>
     <div class="places">
-        <div class="top_1">
-            <a href="" >
+        <div class="top_1" >
+            <a href="" style="background-color:rgb(224, 240, 253) ;" >
                 <div class="img_div">
                     <img src="Img/TOP1_yongdoosan.jpeg" class="top_1_img">
                 </div>
-                <div class="top_1_explain">
+                <div class="top_1_explain" >
                     <div>
                         <span style=" font-size:30px;">
                             <span style="font-size: 100px; color: rgba(0, 0, 0, 0.1);">01</span>
@@ -377,13 +380,13 @@
                         </span>
                     </div>
                     <div style="margin-top: 30px; font-size: 20px;"># 평온한 느낌의 언덕 숲 사이 산책 코스</div>
-                    <div style="margin-top: 30px; font-size: 20px; color:white;">###</div>
-                    <div style="margin-top: 30px; font-size: 20px; color:white;">###</div>
+                    <div style="margin-top: 30px; font-size: 20px; color:rgb(224, 240, 253);">###</div>
+                    <div style="margin-top: 30px; font-size: 20px; color:rgb(224, 240, 253);">###</div>
                 </div>
             </a>
         </div>    
         <div class="top_2">
-            <a href="" >
+            <a href="" style="background-color: beige ;">
                 <div class="top_2_explain">
                     <div class="img_div">
                         <span style=" font-size:30px;">
@@ -392,8 +395,8 @@
                         </span>
                     </div>
                     <div style="margin-top: 30px; font-size: 20px;"># 손 때 묻은 책들을 보며 향수에 젖다</div>
-                    <div style="margin-top: 30px; font-size: 20px; display: none; color:white; display:block">###</div>
-                    <div style="margin-top: 30px; font-size: 20px; color:white;">###</div>
+                    <div style="margin-top: 30px; font-size: 20px; display: none; color:beige; display:block">###</div>
+                    <div style="margin-top: 30px; font-size: 20px; color:beige;">###</div>
                 </div>
                 <div class="img_div">
                     <img src="Img/Top2_Bosu.jpg" class="top_1_img">
@@ -402,7 +405,7 @@
         </div>
         <div class="top_345">
             <a href="">
-                <div class="top_3">
+                <div class="top_3" style="background-color: rgb(255, 237, 243);">
                     <div class="img_div">
                         <img src="Img/Top3_Jagalchi.jpg">
                     </div>
@@ -418,7 +421,7 @@
                 </div>
             </a>
             <a href="">
-                <div class="top_4">
+                <div class="top_4" style="background-color: rgb(255, 237, 243);">
                     <div class="img_div">
                         <img src="Img/Top4_gookjae.jpg">
                     </div>
@@ -434,7 +437,7 @@
                 </div>
             </a>
             <a href="">
-                <div class="top_5">
+                <div class="top_5" style="background-color: rgb(255, 237, 243);">
                     <div class="img_div">
                         <img src="Img/Top5_ggangtong.jpg">
                     </div>
